--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title></title>
@@ -34,7 +36,7 @@
                     </div>
                 </div>
                 <div class="header-content__video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/N-_LIlymjPs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="400" height="320" src="https://www.youtube.com/embed/N-_LIlymjPs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
@@ -126,8 +128,68 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
                     </div>
                 </div>
+                <div class="service-acc">
+                    <div class="service-acc__item">
+                        <div class="service-acc__header">
+                            <button class="service-acc__link">statistics</button>
+                            <i class="fa fa-caret-down"></i>
+                        </div>
+                        <div class="service-acc__body show">
+                            <img src="/img/service.png" alt="">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
+                        </div>
+                    </div>
+                    <div class="service-acc__item">
+                            <div class="service-acc__header">
+                                <button class="service-acc__link">inbox</button>
+                                <i class="fa fa-caret-down"></i>
+                            </div>
+                            <div class="service-acc__body show">
+                                <img src="/img/service.png" alt="">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
+                            </div>
+                        </div>
+                        <div class="service-acc__item">
+                                <div class="service-acc__header">
+                                    <button class="service-acc__link">team</button>
+                                    <i class="fa fa-caret-down"></i>
+                                </div>
+                                <div class="service-acc__body show">
+                                    <img src="../img/service.png" alt="">
+                                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
+                                </div>
+                            </div>
+                            <div class="service-acc__item">
+                                    <div class="service-acc__header">
+                                        <button class="service-acc__link">settings</button>
+                                        <i class="fa fa-caret-down"></i>
+                                    </div>
+                                    <div class="service-acc__body show">
+                                        <img src="../img/service.png" alt="">
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
+                                    </div>
+                                </div>
+                                <div class="service-acc__item">
+                                        <div class="service-acc__header">
+                                            <button class="service-acc__link">feed</button>
+                                            <i class="fa fa-caret-down"></i>
+                                        </div>
+                                        <div class="service-acc__body show">
+                                            <img src="/img/service.png" alt="">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
+                                        </div>
+                                    </div>
+                </div>
             </div>
         </div>
     </section>
+    
+<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="css/js/script.js"></script>
 </body>
 </html>
+
+  
