--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                         <li class="menu-item"><a href="#">Pricing</a></li>
                         <li class="menu-item"><a href="#">Help</a></li>
                     </ul>
+                    <button class="sign-up">sign up</button>
                 </div>
-                <button class="sign-up">sign up</button>
+                
             </nav>
             <div class="header-content">
                 <div class="header-content__text">
@@ -135,7 +136,7 @@
                             <i class="fa fa-caret-down"></i>
                         </div>
                         <div class="service-acc__body show">
-                            <img src="/img/service.png" alt="">
+                            <img src="img/service.png" alt="">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
                         </div>
                     </div>
@@ -145,7 +146,7 @@
                                 <i class="fa fa-caret-down"></i>
                             </div>
                             <div class="service-acc__body show">
-                                <img src="/img/service.png" alt="">
+                                <img src="img/service.png" alt="">
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
                             </div>
                         </div>
@@ -155,7 +156,7 @@
                                     <i class="fa fa-caret-down"></i>
                                 </div>
                                 <div class="service-acc__body show">
-                                    <img src="../img/service.png" alt="">
+                                    <img src="img/service.png" alt="">
                                     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
                                 </div>
                             </div>
@@ -165,7 +166,7 @@
                                         <i class="fa fa-caret-down"></i>
                                     </div>
                                     <div class="service-acc__body show">
-                                        <img src="../img/service.png" alt="">
+                                        <img src="img/service.png" alt="">
                                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
                                     </div>
                                 </div>
@@ -175,7 +176,7 @@
                                             <i class="fa fa-caret-down"></i>
                                         </div>
                                         <div class="service-acc__body show">
-                                            <img src="/img/service.png" alt="">
+                                            <img src="img/service.png" alt="">
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel laboriosam expedita delectus qui ipsa nesciunt, commodi earum rerum alias cupiditate architecto nam porro, voluptatibus eligendi esse quia. Nesciunt, animi molestias.</p>
                                         </div>
                                     </div>
