--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </ul>
                     <button class="sign-up">sign up</button>
                 </div>
-                <i class="fa fa-bars"></i>
+                <i class="fas fa-bars"></i>
             </nav>
             <div class="header-content">
                 <div class="header-content__text">
