--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     
     <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,700,800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <title></title>
 </head>
@@ -215,15 +217,23 @@
                                 <h4>Khalessi</h4>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                             </div>
-                        </div>
-                        <div class="slider__item">
+                    </div>
+                    <div class="slider__item">
                                 <div class="photo">
                                     <img src="img/photo-1.png" alt=""></div>
                                 <div class="custom-text">
                                     <h4>John Doe</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                                 </div>
-                            </div>
+                    </div>
+                    <div class="slider__item">
+                                <div class="photo">
+                                    <img src="img/photo-2.png" alt=""></div>
+                                <div class="custom-text">
+                                    <h4>Jessica Jones</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                                </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -234,7 +244,8 @@
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
-  <script src="css/js/script.js"></script>
+<script src="slick/slick.min.js"></script>
+<script src="css/js/script.js"></script>
 </body>
 </html>
 
