--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                 </div>
                 <div class="team-wrap__persons">
                     <div class="persons-photo">
-                        <img class="person-photo photo-2" src="img/person2.png" alt="">
-                        <img class="person-photo photo-1 active" src="img/person1.png" alt="">
-                        <img class="person-photo photo-3" src="img/person3.png" alt="">
+                        <img class="person-photo photo-2" src="../img/person2.png" alt="">
+                        <img class="person-photo photo-1 active" src="../img/person1.png" alt="">
+                        <img class="person-photo photo-3" src="../img/person3.png" alt="">
                     </div>
                     <div class="persons-text">
                        <div class="person-text not_show">
