--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <div class="service-acc">
                     <div class="service-acc__item">
                         <div class="service-acc__header">
+                                <i class="fas fa-chart-line"></i>
                             <button class="service-acc__link">statistics</button>
                             <i class="fa fa-caret-down"></i>
                         </div>
@@ -144,6 +145,7 @@
                     </div>
                     <div class="service-acc__item">
                             <div class="service-acc__header">
+                                <i class="fas fa-envelope"></i>
                                 <button class="service-acc__link">inbox</button>
                                 <i class="fa fa-caret-down"></i>
                             </div>
@@ -154,6 +156,7 @@
                         </div>
                         <div class="service-acc__item">
                                 <div class="service-acc__header">
+                                    <i class="fas fa-user-friends"></i>
                                     <button class="service-acc__link">team</button>
                                     <i class="fa fa-caret-down"></i>
                                 </div>
@@ -164,6 +167,7 @@
                             </div>
                             <div class="service-acc__item">
                                     <div class="service-acc__header">
+                                        <i class="fas fa-cog"></i>
                                         <button class="service-acc__link">settings</button>
                                         <i class="fa fa-caret-down"></i>
                                     </div>
@@ -174,6 +178,7 @@
                                 </div>
                                 <div class="service-acc__item">
                                         <div class="service-acc__header">
+                                            <i class="fas fa-rss"></i>
                                             <button class="service-acc__link">feed</button>
                                             <i class="fa fa-caret-down"></i>
                                         </div>
