--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     </section>
     <section class="team">
         <div class="container">
-            <div class="team-wrap">
+            <div class="team-wrap"> 
                 <div class="team-wrap__text">
                     <div class="text__logo">
                         <h2>Our Team</h2>
@@ -274,10 +274,10 @@
                     </div>
                     <div class="persons-socials">
                         <span><i class="fab fa-twitter tw"></i></span>
-                        <i class="fab fa-facebook fc"></i>
-                        <i class="fab fa-linkedin ln"></i>
-                        <i class="fab fa-dribbble dr"></i>
-                        <i class="fab fa-behance" be></i>
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-linkedin"></i>
+                        <i class="fab fa-dribbble"></i>
+                        <i class="fab fa-behance"></i>
                     </div>
                 </div>
             </div>
